--- a/Content/Site.css
+++ b/Content/Site.css
@@ -18,3 +18,21 @@ select,
 textarea {
     max-width: 280px;
 }
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.body-content {
+    min-height: 100vh;
+    padding: 0;
+    margin: 0;
+    width: 100vw;
+    max-width: 100vw;
+}
+@media (max-width: 600px) {
+    .body-content {
+        padding: 0;
+    }
+}
