Parte 1 de Inicair Partida

--- a/Views/Home/MenuPrincipal.cshtml
+++ b/Views/Home/MenuPrincipal.cshtml
@@ -78,7 +78,7 @@
         <div class="menu-subtitle">RETRO EDITION</div>
         <hr style="border: 1.5px solid #ffd600; width: 120px; margin: 0 auto 2.5rem auto; opacity: 0.7;" />
         <a href="@Url.Action("CrearJugador", "Home")" class="menu-btn btn-crear">Crear Jugador</a><br />
-        <button type="button" class="menu-btn btn-iniciar">Iniciar Partida</button><br />
+        <a href="@Url.Action("IniciarPartida", "Home")" class="menu-btn btn-iniciar">Iniciar Partida</a><br />
         <button type="button" class="menu-btn btn-agregar">Agregar Palabra</button><br />
         <button type="button" class="menu-btn btn-leader">Leaderboard</button>
         <div class="menu-footer">
