Add: Implementar la funcionalidad "Agregar una palabra nueva al diccionario".
Se creo una interfaz para que el usuario ingrese una nueva palabra.
Se aplicaron validaciones para que la palabra cumpla con los requisitos definidos (longitud, etc.).
Se implementó una validación que no distinga mayúsculas/minúsculas ni tildes para evitar duplicados (ej: arbol vs árbol).
Guardar la palabra con su tilde correspondiente si la tiene.

--- a/Views/Home/CrearJugador.cshtml
+++ b/Views/Home/CrearJugador.cshtml
@@ -29,7 +29,7 @@
         @Html.AntiForgeryToken()
 
         <div class="input-block block-dark">
-            <span class="block-icon">#</span>
+            <span class="block-icon">#</span 
             @Html.LabelFor(m => m.Identificacion, "Identificación")
             @Html.TextBoxFor(m => m.Identificacion, new { 
                 @class = "form-control", 
