--- a/Views/Home/MenuPrincipal.cshtml
+++ b/Views/Home/MenuPrincipal.cshtml
@@ -120,18 +120,18 @@
         </div>
     }
 
-    <div>
-        <div class="menu-title">AHORCADO</div>
-        <div class="menu-subtitle">RETRO EDITION</div>
-        <hr style="border: 1.5px solid #ffd600; width: 120px; margin: 0 auto 2.5rem auto; opacity: 0.7;" />
-        <a href="@Url.Action("CrearJugador", "Home")" class="menu-btn btn-crear">Crear Jugador</a><br />
-        <a href="@Url.Action("IniciarPartida", "Home")" class="menu-btn btn-iniciar">Iniciar Partida</a><br />
-        <button type="button" class="menu-btn btn-agregar">Agregar Palabra</button><br />
-        <button type="button" class="menu-btn btn-leader">Leaderboard</button>
-        <div class="menu-footer">
-            <!-- Texto eliminado -->
-        </div>
+<div>
+    <div class="menu-title">AHORCADO</div>
+    <div class="menu-subtitle">RETRO EDITION</div>
+    <hr style="border: 1.5px solid #ffd600; width: 120px; margin: 0 auto 2.5rem auto; opacity: 0.7;" />
+    <a href="@Url.Action("CrearJugador", "Home")" class="menu-btn btn-crear">Crear Jugador</a><br />
+    <a href="@Url.Action("IniciarPartida", "Home")" class="menu-btn btn-iniciar">Iniciar Partida</a><br />
+    <a href="@Url.Action("Crear", "Palabras")" class="menu-btn btn-agregar">Agregar Palabra</a><br />
+    <button type="button" class="menu-btn btn-leader">Leaderboard</button>
+    <div class="menu-footer">
+        <!-- Texto eliminado -->
     </div>
+</div>
 </div>
 
 <script>
