--- a/Views/Home/MenuPrincipal.cshtml
+++ b/Views/Home/MenuPrincipal.cshtml
@@ -127,7 +127,7 @@
     <a href="@Url.Action("CrearJugador", "Home")" class="menu-btn btn-crear">Crear Jugador</a><br />
     <a href="@Url.Action("IniciarPartida", "Home")" class="menu-btn btn-iniciar">Iniciar Partida</a><br />
     <a href="@Url.Action("Crear", "Palabras")" class="menu-btn btn-agregar">Agregar Palabra</a><br />
-    <button type="button" class="menu-btn btn-leader">Leaderboard</button>
+    <a href="@Url.Action("Leaderboard", "Home")" class="menu-btn btn-leader">Leaderboard</a><br />
     <div class="menu-footer">
         <!-- Texto eliminado -->
     </div>
