--- a/Views/Home/Leaderboard.cshtml
+++ b/Views/Home/Leaderboard.cshtml
@@ -2,37 +2,40 @@
 @{
     ViewBag.Title = "Leaderboard";
 }
+<div class="crear-jugador-container">
+    <a href="@Url.Action("MenuPrincipal", "Home")" class="volver-btn" title="Volver al menú principal">&#8592;</a>
+    <span class="titulo-crear">Leaderboard</span>
 
-<a href="@Url.Action("MenuPrincipal", "Home")" class="volver-btn" title="Volver al menú principal">&#8592;</a>
-<h2>Leaderboard</h2>
-
-@if (Model != null && Model.Any())
-{
-    <table class="table table-striped table-bordered">
-        <thead>
-            <tr>
-                <th>Identificación</th>
-                <th>Nombre</th>
-                <th>Marcador</th>
-                <th>Partidas Ganadas</th>
-                <th>Partidas Perdidas</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var jugador in Model)
-            {
+    @if (Model != null && Model.Any())
+    {
+        <table class="table table-striped table-bordered">
+            <thead>
                 <tr>
-                    <td>@jugador.Identificacion</td>
-                    <td>@jugador.Nombre</td>
-                    <td>@jugador.Marcador</td>
-                    <td>@jugador.PartidasGanadas</td>
-                    <td>@jugador.PartidasPerdidas</td>
+                    <th>Identificación</th>
+                    <th>Nombre</th>
+                    <th>Marcador</th>
+                    <th>Partidas Ganadas</th>
+                    <th>Partidas Perdidas</th>
                 </tr>
-            }
-        </tbody>
-    </table>
-}
-else
-{
-    <p>No hay jugadores disponibles en el leaderboard en este momento.</p>
-}
+            </thead>
+            <tbody>
+                @foreach (var jugador in Model)
+                {
+                    <tr>
+                        <td>@jugador.Identificacion</td>
+                        <td>@jugador.Nombre</td>
+                        <td>@jugador.Marcador</td>
+                        <td>@jugador.PartidasGanadas</td>
+                        <td>@jugador.PartidasPerdidas</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <div class="input-block block-dark">
+            <p>No hay jugadores disponibles en el leaderboard en este momento.</p>
+        </div>
+    }
+</div>
